fixed dependencies and object logic